--- a/css/bondi.css
+++ b/css/bondi.css
@@ -17,6 +17,7 @@ body {
 .main-btn:hover {
   color: var(--yellow-color);
 }
+
 .main-title::after {
   content: "";
   width: 120px;
@@ -84,11 +85,11 @@ body {
   color: var(--yellow-color);
 }
 
-@media (width<=992px) {
+/* @media (width<=992px) {
   .features .row .col-lg-4.col-md-6:last-child {
     margin: 0 auto;
   }
-}
+} */
 
 /* End Features */
 /* Start Our Work */
@@ -106,12 +107,12 @@ body {
 .our-work ul li:not(.active):hover {
   color: var(--red-color);
 }
-.our-work .box {
+/* .our-work .box {
   padding: 5px;
   overflow: hidden;
   position: relative;
-}
-.our-work .box::before {
+} */
+/* .our-work .box::before {
   content: attr(data-work);
   position: absolute;
   background-color: rgb(51 209 204 / 76%);
@@ -125,16 +126,48 @@ body {
   transition: 0.3s;
   font-size: 1.5rem;
   transform: translateX(calc(-100% - 5px));
+} */
+/* .our-work .box:hover::before {
+  transform: translateX(0);
+} */
+
+.our-work .box {
+  padding: 5px;
+  overflow: hidden;
+  position: relative;
+  box-sizing: border-box;
 }
-.our-work .box:hover::before {
+
+.our-work .box .overlay-text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgb(51 209 204 / 76%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  color: white;
+  font-size: 1.5rem;
+  /* transform: translateX(calc(-100% - 5px)); */
+  transform: translateX(calc(-100% - 5px));
+  transition: 0.3s all ease-in-out;
+  z-index: 1;
+  will-change: transform;
+}
+
+.our-work .box:hover .overlay-text {
   transform: translateX(0);
 }
+
 /* End Our Work */
-/* Start Stuff */
-.stuff .description {
+/* Start about */
+.about .description {
   max-width: 500px;
 }
-/* End Stuff */
+/* End about */
 /* Start Team */
 .team {
   background-color: var(--section-color);
@@ -145,12 +178,26 @@ body {
 .team .box h4 {
   background-color: var(--green-color);
 }
+
 /* End Team */
 /* Start Project */
 .project {
   background-color: var(--dark-color);
 }
 /* End Project */
+
+/* .techCarousel .item {
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
+  height: 100%;
+} */
+
+/* .techCarousel .item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+} */
 /* Start Subscribe */
 .subscribe {
   background-color: var(--yellow-color);
@@ -197,3 +244,36 @@ body {
   background-color: #ff0000;
 }
 /* End Footer */
+
+/* owl */
+
+.owl-carousel .owl-nav button.owl-next,
+.owl-carousel .owl-nav button.owl-prev {
+  width: 35px;
+  height: 35px;
+  background: #4493ba;
+  border-radius: 50%;
+  outline: 0 !important;
+  border: none !important;
+  font-size: 28px;
+  color: #fff;
+  padding: 8px 6px !important;
+}
+
+.owl-theme .owl-nav [class*="owl-"]:hover {
+  background: var(--dark-color);
+  color: #fff;
+}
+
+.owl-carousel .owl-nav button span {
+  position: relative;
+  top: -13px !important;
+}
+
+/* .owl-carousel .owl-nav {
+  margin: 30px 0 0 0;
+} */
+.owl-dots .owl-dot.active span,
+.owl-dots .owl-dot:hover span {
+  background-color: var(--green-color) !important;
+}
